@@ -106,8 +106,18 @@ class TestFind < Test::Unit::TestCase
         assert_equal([d, dir], a)
 
         a = []
+        Find.find(d, ignore_error: true).each {|f| a << f }
+        assert_equal([d, dir], a)
+
+        a = []
         assert_raise_with_message(Errno::EACCES, /#{Regexp.quote(dir)}/) do
           Find.find(d, ignore_error: false) {|f| a << f }
+        end
+        assert_equal([d, dir], a)
+
+        a = []
+        assert_raise_with_message(Errno::EACCES, /#{Regexp.quote(dir)}/) do
+          Find.find(d, ignore_error: false).each {|f| a << f }
         end
         assert_equal([d, dir], a)
       ensure
@@ -130,10 +140,20 @@ class TestFind < Test::Unit::TestCase
         Find.find(d, ignore_error: true) {|f| a << f }
         assert_equal([d, dir, file], a)
 
+        a = []
+        Find.find(d, ignore_error: true).each {|f| a << f }
+        assert_equal([d, dir, file], a)
+
         skip "no meaning test on Windows" if /mswin|mingw/ =~ RUBY_PLATFORM
         a = []
         assert_raise_with_message(Errno::EACCES, /#{Regexp.quote(file)}/) do
           Find.find(d, ignore_error: false) {|f| a << f }
+        end
+        assert_equal([d, dir, file], a)
+
+        a = []
+        assert_raise_with_message(Errno::EACCES, /#{Regexp.quote(file)}/) do
+          Find.find(d, ignore_error: false).each {|f| a << f }
         end
         assert_equal([d, dir, file], a)
 
