@@ -1,3 +1,7 @@
+Tue Mar  4 00:25:35 2014  Kazuki Tsujimoto  <kazuki@callcc.net>
+
+	* lib/find.rb (Find#find): should pass ignore_error option to enumerators.
+
 Mon Mar  3 13:27:35 2014  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* test/test_find.rb (TestFind#test_unsearchable_dir): ruby cannot make
